# hunter-os

./: .gitattributes  .gitignore  BUILD_FIXES.md  CLAUDE.md  Dockerfile  RAM_OPTIMIZATION.md  README.md  SECURITY.md  build-aur-packages.sh  build_with_docker.sh  hunter-ui-prototype.html  packages.x86_64  pacman.conf  profiledef.sh  setup.sh
.github/workflows/: build.yml
airootfs/etc/: fstab  hostname  hosts  issue  mkinitcpio.conf  motd  os-release
airootfs/etc/apparmor.d/: usr.local.bin.hunter  usr.local.bin.hunter-get
airootfs/etc/bash_completion.d/: hunter
airootfs/etc/calamares/: settings.conf
airootfs/etc/calamares/modules/: bootloader.conf  displaymanager.conf  finished.conf  packages.conf  services-systemd.conf  shellprocess-hunter.conf  unpackfs.conf  users.conf  welcome.conf
airootfs/etc/fail2ban/: jail.local
airootfs/etc/lightdm/: lightdm-gtk-greeter.conf
airootfs/etc/profile.d/: hunter-security.sh
airootfs/etc/sddm.conf.d/: autologin.conf  hunter.conf
airootfs/etc/skel/: .xinitrc
airootfs/etc/skel/.config/: breezerc  (+7 more)
airootfs/etc/sysctl.d/: 99-hunter-security.conf
airootfs/etc/ufw/: before.rules  ufw.conf
airootfs/root/: .automated_script.sh  customize_airootfs.sh
efiboot/loader/: loader.conf
efiboot/loader/entries/: 01-hunter-os-x86_64-linux.conf  02-hunter-os-x86_64-ram.conf
grub/: grub.cfg  loopback.cfg
grub/themes/hunter/: theme.txt
hunter-system-monitor/: Cargo.toml  README.md  build.sh
hunter-system-monitor/src/: main.rs
syslinux/: archiso.cfg  archiso_head.cfg  archiso_sys-linux.cfg  archiso_tail.cfg  syslinux.cfg
(+38 files in other folders)
